# FitScoreAI

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: analyzer.py  main.py  schemas.py
backend/tests/: conftest.py  test_analyzer.py  test_api.py  test_schemas.py
docs/: vue-learning-guide.md
docs/plans/: 2026-03-10-fitscore-design.md  2026-03-10-fitscore-implementation-plan.md
frontend/: nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: fitscore-demo.spec.ts
frontend/src/: App.vue  api.ts  types.ts
frontend/src/__tests__/: api.test.ts
frontend/src/components/: JDInputStep.vue  MetricCard.vue  ResultsDashboard.vue  UploadStep.vue
frontend/src/components/__tests__/: JDInputStep.test.ts  MetricCard.test.ts  ResultsDashboard.test.ts  UploadStep.test.ts
