[project]
name = "fitscore-backend"
version = "0.1.0"
description = "FitScoreAI backend - resume-to-JD fit analysis"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "pdfplumber>=0.11.4",
    "anthropic>=0.43.0",
    "pydantic>=2.10.4",
]
