[project]
name = "fitscore-backend"
version = "0.1.0"
description = "FitScoreAI backend - resume-to-JD fit analysis"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "pdfplumber>=0.11.4",
    "anthropic>=0.43.0",
    "pydantic>=2.10.4",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
